adding deploy code to travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
     - docker push willgray/multi-nginx
     - docker push willgray/multi-server
     - docker push willgray/multi-worker
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: us-east-1
+    app: multi-docker
+    env: MultiDocker-env-1
+    bucket_name: elasticbeanstalk-us-east-1-375689575860
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
