--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
     - docker build -t willgray/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true willgray/react-test npm run test
+    - docker run -e CI=true willgray/react-test npm test
 
 deploy:
     provider: script
